# non-empty-str

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
.github/workflows/: release.yml
changes/: ~as-ref.feature.md  ~as-string.feature.md  ~check.removal.md  ~deref.change.md  ~ergonomics.feature.md  ~export.feature.md  ~from-str.feature.md  ~into-static.change.md  ~owned.feature.md  ~rewrite.change.md  ~serde.change.md  ~static.change.md  ~static.feature.md  ~static.removal.md
src/: boxed.rs  cow.rs  empty.rs  internal.rs  iter.rs  lib.rs  macros.rs  owned.rs  ownership.rs  serde.rs  str.rs  string.rs
