[package]
name = "non-empty-str"
version = "0.1.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
description = "Non-empty strings."
documentation = "https://docs.rs/non-empty-str"
readme = "README.md"
repository = "https://github.com/nekitdev/non-empty-str"
license = "MIT"
keywords = ["non-empty", "string"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]

[dependencies.const-macros]
version = "0.1.1"

[dependencies.miette]
version = "7.5.0"
optional = true

[dependencies.serde]
version = "1.0.219"
default-features = false
optional = true

[dependencies.thiserror]
version = "2.0.12"
default-features = false

[features]
default = ["std"]
diagnostics = ["dep:miette", "std"]
serde = ["dep:serde"]
unsafe-assert = []
alloc = ["serde?/alloc"]
std = ["serde?/std"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
