[package]
name = "non-empty-str"
version = "0.6.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
description = "Non-empty strings."
documentation = "https://docs.rs/non-empty-str"
readme = "README.md"
repository = "https://github.com/nekitdev/non-empty-str"
license = "MIT"
keywords = ["non-empty", "string"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]

[dependencies.const-macros]
version = "0.3.0"

[dependencies.into-static]
version = "0.3.0"
default-features = false
optional = true

[dependencies.miette]
version = "7.5.0"
optional = true

[dependencies.serde]
version = "1.0.219"
default-features = false
optional = true

[dependencies.thiserror]
version = "2.0.12"
default-features = false

[features]
default = ["std"]
diagnostics = ["dep:miette", "std"]
static = ["dep:into-static"]
serde = ["dep:serde"]
borrow = []
unsafe-assert = []
alloc = ["serde?/alloc", "into-static?/alloc"]
std = ["serde?/std", "into-static?/std"]

[package.metadata.docs.rs]
features = ["serde", "into-static"]
rustdoc-args = ["--cfg", "docsrs"]
