[package]
name = "non-empty-str"
version = "0.11.3"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
rust-version = "1.90"
description = "Non-empty strings."
documentation = "https://docs.rs/non-empty-str"
readme = "README.md"
repository = "https://github.com/nekitdev/non-empty-str"
license = "MIT"
keywords = ["non-empty", "string"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]

[dependencies.miette]
version = "7.6.0"
optional = true

[dependencies.non-empty-iter]
version = "0.2.0"
default-features = false

[dependencies.non-empty-slice]
version = "0.5.1"
default-features = false

[dependencies.non-zero-size]
version = "0.1.0"

[dependencies.ownership]
version = "0.2.4"
default-features = false
optional = true

[dependencies.serde]
version = "1.0.228"
default-features = false
optional = true

[dependencies.thiserror]
version = "2.0.17"
default-features = false

[features]
default = ["std"]
ownership = ["dep:ownership", "non-empty-slice/ownership"]
diagnostics = ["dep:miette", "non-empty-slice/diagnostics", "std"]
serde = ["dep:serde"]
unsafe-assert = []
alloc = ["serde?/alloc", "non-empty-slice/alloc", "non-empty-iter/alloc", "ownership?/alloc"]
std = ["serde?/std", "non-empty-slice/std", "non-empty-iter/std", "ownership?/std"]

[package.metadata.docs.rs]
features = ["serde", "ownership"]
rustdoc-args = ["--cfg", "docsrs"]
